add counters and employees
