# src/Application/routes.php
@@ -1,7 +1,10 @@
 <?php
 
 use Illuminate\Support\Facades\Route;
+use Src\Application\Http\Controllers\CounterController;
 use Src\Application\Http\Controllers\TeamController;
 
 Route::post('team', [TeamController::class, 'storeAction']);
 Route::delete('team/{team}', [TeamController::class, 'deleteAction']);
+
+Route::post('counter', [CounterController::class, 'storeAction']);
