# storage/api-docs/api-docs.json
@@ -6,6 +6,49 @@
         "version": "1.0.0"
     },
     "paths": {
+        "/counter": {
+            "post": {
+                "tags": [
+                    "Counters"
+                ],
+                "summary": "Store a counter",
+                "operationId": "a32c478be57986eeb10cd86c53a2ea39",
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "properties": {
+                                    "": {
+                                        "properties": {
+                                            "name": {
+                                                "type": "string"
+                                            },
+                                            "team_id": {
+                                                "type": "integer"
+                                            }
+                                        },
+                                        "type": "object"
+                                    }
+                                },
+                                "type": "object",
+                                "example": {
+                                    "name": "Dev team",
+                                    "team_id": 1
+                                }
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "202": {
+                        "description": "Successful operation"
+                    },
+                    "422": {
+                        "description": "Unprocessable Content"
+                    }
+                }
+            }
+        },
         "/team": {
             "post": {
                 "tags": [
